--- a/bait.html
+++ b/bait.html
@@ -23,6 +23,52 @@
         <a href="bait.html">Bait Offered</a>
     </nav>
 
+    <h1>Bait</h1>
+    <p>*Bait availability based on season*</p>
+
+    <section id="livebait">
+        <h2>Live Bait:</h2>
+        <dl>
+            <dt>Redworms - $3.45/24ct.</dt>
+            <dt>Night Crawlers - $2.80/12ct.</dt>
+            <dt>Glow Worms - $3.25/12ct.</dt>
+            <dt>Wax Worms - $2.80/50ct.</dt>
+            <dt>Leeches - $4.00/12ct.</dt>
+        </dl>
+    </section>
+
+    <section id="livefish">
+        <h2>Live Fish:</h2>
+        <dl>
+            <dt>Crappie Minnows - $2.00/12ct.</dt>
+            <dt>Bass Minnows - $2.20/12ct.</dt>
+            <dt>Chubs:</dt>
+            <dt>Goldfish: $2.00/ea.</dt>
+            <dd>Small $2.00/ea.</dd>
+            <dd>Large $3.00/ea.</dd>
+            <dt>Cat fish:</dt>
+            <dd>Small - $1.50/ea.</dd>
+            <dd>Med - $3.00/ea.</dd>
+            <dd>Large - $4.50/ea.</dd>
+        </dl>
+    </section>
+
+
+    <section id="coldbait">
+        <h2>Cold Bait:</h2>
+        <dl>
+            <dt>Skipjack - $8.00</dt>
+            <dt>Shad - $6.00</dt>
+            <dt>Strawberry Liver - $3.00/tub</dt>
+            <dt>Cherry Liver - $3.00/tub</dt>
+            <dt>Liver - $3.00/tub</dt>
+            <dt>Shrimp - $4.50/tub</dt>
+            <dt>Corn - $1.00/tub</dt>
+        </dl>
+
+        <h1>Prices and availability may change</h1>
+    </section>
+
 </body>
 
 </html>
