add two files and style navigation

--- a/bait.html
+++ b/bait.html
@@ -20,7 +20,9 @@
 
     <nav class="nav">
         <a href="index.html">Home</a>
-        <a href="bait.html">Bait Offered</a>
+        <a class="active" href="bait.html">Bait Offered</a>
+        <a href="service.html">Respooling Service</a>
+        <a href="connect.html">Stay Connected</a>
     </nav>
 
     <h1>Bait</h1>
