--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <img src="logo2.png" alt="Store Logo" width="300" class="logo">
 
     <nav class="nav">
-        <a href="index.html">Home</a> |
+        <a class="active" href="index.html">Home</a>
         <a href="bait.html">Bait Offered</a>
+        <a href="service.html">Respooling Service</a>
+        <a href="connect.html">Stay Connected</a>
     </nav>
 
     <h1>Welcome to Lakeside!</h1>
