add content to connect and service page

--- a/bait.html
+++ b/bait.html
@@ -17,12 +17,14 @@
     <h1 class="header">Howard's Lakeside General Store</h1>
 
     <img src="logo2.png" alt="Store Logo" width="300" class="logo">
-
+   
     <nav class="nav">
-        <a href="index.html">Home</a>
-        <a class="active" href="bait.html">Bait Offered</a>
-        <a href="service.html">Respooling Service</a>
-        <a href="connect.html">Stay Connected</a>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="bait.html">Bait Offered</a></li>
+            <li><a href="service.html">Respooling Service</a></li>
+            <li><a href="connect.html">Stay Connected</a></li>
+        </ul>
     </nav>
 
     <h1>Bait</h1>
@@ -30,13 +32,13 @@
 
     <section id="livebait">
         <h2>Live Bait:</h2>
-        <dl>
-            <dt>Redworms - $3.45/24ct.</dt>
-            <dt>Night Crawlers - $2.80/12ct.</dt>
-            <dt>Glow Worms - $3.25/12ct.</dt>
-            <dt>Wax Worms - $2.80/50ct.</dt>
-            <dt>Leeches - $4.00/12ct.</dt>
-        </dl>
+        <ul>
+            <li>Redworms - $3.45/24ct.</li>
+            <li>Night Crawlers - $2.80/12ct.</li>
+            <li>Glow Worms - $3.25/12ct.</li>
+            <li>Wax Worms - $2.80/50ct.</li>
+            <li>Leeches - $4.00/12ct.</li>
+        </ul>
     </section>
 
     <section id="livefish">
@@ -45,7 +47,7 @@
             <dt>Crappie Minnows - $2.00/12ct.</dt>
             <dt>Bass Minnows - $2.20/12ct.</dt>
             <dt>Chubs:</dt>
-            <dt>Goldfish: $2.00/ea.</dt>
+            <dd>Goldfish: $2.00/ea.</dd>
             <dd>Small $2.00/ea.</dd>
             <dd>Large $3.00/ea.</dd>
             <dt>Cat fish:</dt>
@@ -58,15 +60,15 @@
 
     <section id="coldbait">
         <h2>Cold Bait:</h2>
-        <dl>
-            <dt>Skipjack - $8.00</dt>
-            <dt>Shad - $6.00</dt>
-            <dt>Strawberry Liver - $3.00/tub</dt>
-            <dt>Cherry Liver - $3.00/tub</dt>
-            <dt>Liver - $3.00/tub</dt>
-            <dt>Shrimp - $4.50/tub</dt>
-            <dt>Corn - $1.00/tub</dt>
-        </dl>
+        <ul>
+            <li>Skipjack - $8.00</li>
+            <li>Shad - $6.00</li>
+            <li>Strawberry Liver - $3.00/tub</li>
+            <li>Cherry Liver - $3.00/tub</li>
+            <li>Liver - $3.00/tub</li>
+            <li>Shrimp - $4.50/tub</li>
+            <li>Corn - $1.00/tub</li>
+            </ul>
 
         <h1>Prices and availability may change</h1>
     </section>
