--- a/connect.html
+++ b/connect.html
@@ -19,11 +19,26 @@
     <img src="logo2.png" alt="Store Logo" width="300" class="logo">
 
     <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="bait.html">Bait Offered</a>
-        <a href="service.html">Respooling Service</a>
-        <a class="active" href="connect.html">Stay Connected</a>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="bait.html">Bait Offered</a></li>
+            <li><a href="service.html">Respooling Service</a></li>
+            <li><a href="connect.html">Stay Connected</a></li>
+        </ul>
     </nav>
+    <div class="page">
+    <section class="connect">
+    <h1>Stay Connected</h1>
+    <p>
+        Stay in the loop with all things bait and fishing by following our Facebook page! We share daily updates on the
+        freshest bait arrivals, exclusive deals, and expert tips to help you make the most of every fishing trip.
+    </p>
+    <p>Join our community today by clicking on the blue button down below!</p>
+    <a class="facebook" href="https://www.facebook.com/profile.php?id=100057407261126" target="_blank">Facebook</a>
+</section>
+
+<img src="bait1.jpg" alt="Guy Fishing" width= "400" class="fishing">
+</div>
 </body>
 
 </html>
