--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <img src="logo2.png" alt="Store Logo" width="300" class="logo">
 
     <nav class="nav">
-        <a class="active" href="index.html">Home</a>
-        <a href="bait.html">Bait Offered</a>
-        <a href="service.html">Respooling Service</a>
-        <a href="connect.html">Stay Connected</a>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="bait.html">Bait Offered</a></li>
+            <li><a href="service.html">Respooling Service</a></li>
+            <li><a href="connect.html">Stay Connected</a></li>
+        </ul>
     </nav>
 
     <h1>Welcome to Lakeside!</h1>
@@ -41,8 +43,13 @@
 
     <section id="contact">
         <h2>Contact Info</h2>
-        <p>Email:</p>
+        <h3>Email:</h3>
         <p><a href="howardslakeside@gmail.com">HowardsLakeside@gmail.com</a></p>
+        <h3>Phone:</h3>
+        <p><a href="tel:+9375051037">(937)505-1037</a></p>
+        <h3>Address:</h3>
+        <p>1919 Croft Rd</p>
+        <p>Springfield, Ohio 45503</p>
     </section>
 </body>
 
