--- a/service.html
+++ b/service.html
@@ -19,11 +19,20 @@
     <img src="logo2.png" alt="Store Logo" width="300" class="logo">
 
     <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="bait.html">Bait Offered</a>
-        <a class="active" href="service.html">Respooling Service</a>
-        <a href="connect.html">Stay Connected</a>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="bait.html">Bait Offered</a></li>
+            <li><a href="service.html">Respooling Service</a></li>
+            <li><a href="connect.html">Stay Connected</a></li>
+        </ul>
     </nav>
+
+    <section class="respool">
+        <h1> Respooling Service</h1>
+        <h2>We offer reel respooling!</h2>
+        <p>Leave your broken down reels with us and within 24 hours we will have them respooled to your liking.</p>
+        <img src="spooling1.jpg" alt="Fishing Spools" width="300" id="spool">
+    </section>
 </body>
 
 </html>
