added footer and final touches

--- a/bait.html
+++ b/bait.html
@@ -72,7 +72,9 @@
 
         <h1>Prices and availability may change</h1>
     </section>
-
+    <footer>
+        <p>Howard's Lakeside General Store &copy;2024 </p>
+    </footer>
 </body>
 
 </html>
