--- a/connect.html
+++ b/connect.html
@@ -39,6 +39,9 @@
 
 <img src="bait1.jpg" alt="Guy Fishing" width= "400" class="fishing">
 </div>
+<footer>
+    <p>Howard's Lakeside General Store &copy;2024 </p>
+</footer>
 </body>
 
 </html>
