--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <p>1919 Croft Rd</p>
         <p>Springfield, Ohio 45503</p>
     </section>
+    <footer>
+        <p>Howard's Lakeside General Store &copy;2024 </p>
+    </footer>
 </body>
 
 </html>
