--- a/service.html
+++ b/service.html
@@ -33,6 +33,9 @@
         <p>Leave your broken down reels with us and within 24 hours we will have them respooled to your liking.</p>
         <img src="spooling1.jpg" alt="Fishing Spools" width="300" id="spool">
     </section>
+    <footer>
+        <p>Howard's Lakeside General Store &copy;2024 </p>
+    </footer>
 </body>
 
 </html>
